@@ -1,2 +1,7 @@
 # JavaFX-Pomodoro-Timer
 Building a Pomodoro study timer using JavaFx
+
+
+To compile and run:
+javac --module-path "<javafx_path>" --add-modules=javafx.controls Main.java Timerstate.java
+java --module-path "<javafx_path>"  --add-modules=javafx.controls Main
